--- a/style.css
+++ b/style.css
@@ -1,16 +1,71 @@
 .body {
+    
+    height:900px;
     background-image: url(images/RPS\ background.png);
     background-repeat: no-repeat;
     background-size: cover; 
+    padding-left: 30px;
+    padding-right: 30px;
+
 }
 
 #headerdiv {
 
     color: white;
+    font-family: 'Slackey', cursive;  
+    font-size: 40px;
     text-align: center;
     margin-top: 10px;
-    text-shadow: 2px 2px #ff0000;
+    margin-bottom: 20px;
+    text-shadow: 10px 6px 10px #000000;
 
 }
     
+#flexdiv {
 
+    display: flex;
+    height: 400px;
+    justify-content: center;
+    align-content: space-between;
+    flex-flow: row;
+    background-color: rgba(0, 0, 0, 0.502);
+    border-radius: 25px;
+    border: 5px solid rgba(252, 252, 252, 0.701);
+}
+
+.gamerboxes {
+
+    height: 350px;
+    width: 45%;
+    background-color: rgba(255, 255, 255, 0.728);
+    border-radius: 25px;
+    border: 5px solid rgba(0, 0, 0, 0.803);
+    margin-top: 20px;
+    margin-right: 30px;
+    margin-left: 30px;
+}
+
+#resultsdiv {
+
+    display: flex;
+    height: 250px;
+    justify-content: center;
+    align-content: center;
+    flex-flow: row;
+    background-color: rgba(0, 0, 0, 0.502);
+    border-radius: 25px;
+    border: 5px solid rgba(252, 252, 252, 0.701);
+    margin-top: 10px;
+}
+
+#resultappend {
+
+    height: 200px;
+    width: 80%;
+    background-color: rgba(255, 255, 255, 0.728);
+    border-radius: 25px;
+    border: 5px solid rgba(0, 0, 0, 0.803);
+    margin-top: 20px;
+    margin-right: 30px;
+    margin-left: 30px;
+}
