--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@
 
     color: white;
     font-family: 'Slackey', cursive;  
-    font-size: 40px;
+    font-size: 50px;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 20px;
     text-shadow: 10px 6px 10px #000000;
 
@@ -37,12 +37,16 @@
 
     height: 350px;
     width: 45%;
+    text-align: center;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 30px;
     background-color: rgba(255, 255, 255, 0.728);
     border-radius: 25px;
     border: 5px solid rgba(0, 0, 0, 0.803);
     margin-top: 20px;
     margin-right: 30px;
     margin-left: 30px;
+    padding-top:10px;
 }
 
 #resultsdiv {
@@ -55,17 +59,78 @@
     background-color: rgba(0, 0, 0, 0.502);
     border-radius: 25px;
     border: 5px solid rgba(252, 252, 252, 0.701);
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 #resultappend {
 
     height: 200px;
     width: 80%;
+    text-align: center;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 30px;
     background-color: rgba(255, 255, 255, 0.728);
     border-radius: 25px;
     border: 5px solid rgba(0, 0, 0, 0.803);
     margin-top: 20px;
     margin-right: 30px;
     margin-left: 30px;
+    padding-top:10px;
+
 }
+#rock {
+
+    height:150px;
+    width: 150px;
+    background-image: url(images/rock1.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: rgba(255, 255, 255, 0.468);
+    border: 5px solid rgba(0, 0, 0, 0.803);
+    border-radius: 10px;
+    box-shadow: 10px 10px 10px #000000;
+    margin-left: 20px;
+    margin-right: 20px;
+
+}
+
+#scissor {
+
+    height:150px;
+    width: 150px;
+    background-image: url(images/scissor1.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: rgba(255, 255, 255, 0.468);
+    border: 5px solid rgba(0, 0, 0, 0.803);
+    border-radius: 10px;
+    box-shadow: 10px 10px 10px #000000;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+#paper {
+
+    height:150px;
+    width: 150px;
+    background-image: url(images/paper1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: rgba(255, 255, 255, 0.468);
+    border: 5px solid rgba(0, 0, 0, 0.803);
+    border-radius: 10px;
+    box-shadow: 10px 10px 10px #000000;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+#playerprompt {
+
+    margin-top: 30px;
+}
+
+#opponentprompt {
+
+    margin-top: 30px;
+}
+
