--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     font-size: 50px;
     text-align: center;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     text-shadow: 10px 6px 10px #000000;
 
 }
@@ -26,7 +26,7 @@
     display: flex;
     height: 400px;
     justify-content: center;
-    align-content: space-between;
+    align-content: space-evenly;
     flex-flow: row;
     background-color: rgba(0, 0, 0, 0.502);
     border-radius: 25px;
@@ -36,7 +36,7 @@
 .gamerboxes {
 
     height: 350px;
-    width: 45%;
+    width: 35%;
     text-align: center;
     font-family: 'Orbitron', sans-serif;
     font-size: 30px;
@@ -44,8 +44,8 @@
     border-radius: 25px;
     border: 5px solid rgba(0, 0, 0, 0.803);
     margin-top: 20px;
-    margin-right: 30px;
-    margin-left: 30px;
+    /* margin-right: 20px;
+    margin-left: 20px; */
     padding-top:10px;
 }
 
@@ -62,10 +62,12 @@
     margin-top: 20px;
 }
 
-#resultappend {
+
+
+#swap-zone {
 
     height: 200px;
-    width: 80%;
+    width: 35%;
     text-align: center;
     font-family: 'Orbitron', sans-serif;
     font-size: 30px;
@@ -78,6 +80,67 @@
     padding-top:10px;
 
 }
+
+#playertwo {
+
+    height: 200px;
+    width: 35%;
+    text-align: center;
+    font-family: 'Orbitron', sans-serif;
+    text-decoration: underline;
+    font-size: 27px;
+    text-underline-position: below;
+    background-color: rgba(255, 255, 255, 0.728);
+    border-radius: 25px;
+    border: 5px solid rgba(0, 0, 0, 0.803);
+    margin-top: 20px;
+    margin-right: 30px;
+    margin-left: 30px;
+    padding-top:10px;
+}
+
+#playerone {
+
+    height: 200px;
+    width: 35%;
+    text-align: center;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 27px;
+    text-decoration: underline;
+    background-color: rgba(255, 255, 255, 0.728);
+    border-radius: 25px;
+    border: 5px solid rgba(0, 0, 0, 0.803);
+    margin-top: 20px;
+    margin-right: 30px;
+    margin-left: 30px;
+    padding-top:10px;
+}
+
+
+#startbutt {
+
+    height:90px;
+    width: 90px;
+    background-image: url(images/skull1.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    font-family: 'Slackey', cursive; 
+    font-size:16px;
+    padding-top: 5px;
+    color: rgba(255, 255, 255, 0.92);
+    background-color: rgba(18, 1, 103, 0.557);
+    border: 5px solid rgb(220, 0, 0);
+    border-radius: 15px;
+    box-shadow: 10px 10px 10px #000000;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 30px;
+    padding-right:10px;
+
+
+}
+
+
 #rock {
 
     height:150px;
@@ -124,13 +187,61 @@
     margin-right: 20px;
 }
 
-#playerprompt {
+#username {
 
-    margin-top: 30px;
+    width: 60%;
+    height:45px;
+    font-size: 25px;
+    text-align: center;
+    border: 3px solid rgb(0, 0, 0);
+
 }
 
-#opponentprompt {
+#usernameprompt {
 
-    margin-top: 30px;
+    text-decoration: underline;
+    font-size: 27px;
+    margin-top: 10px;
 }
 
+#chat-messages {
+
+    width: 40%;
+    height: 200px;
+    font-size:12px;
+    text-align: left;
+    margin-left: 20px;
+
+
+}
+
+#chat-input {
+
+    width: 60%;
+    height: 45px;
+    font-size:25px;
+    text-align: center;
+    border: 3px solid rgb(0, 0, 0);
+
+}
+
+#chat-send {
+
+    height:80px;
+    width: 80px;
+    background-image: url(images/skull1.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    font-family: 'Slackey', cursive; 
+    font-size:16px;
+    padding-top: 5px;
+    color: rgba(255, 255, 255, 0.92);
+    background-color: rgba(18, 1, 103, 0.557);
+    border: 5px solid rgb(220, 0, 0);
+    border-radius: 15px;
+    box-shadow: 10px 10px 10px #000000;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+
+}
